Tighten related videos writing

--- a/khan-internship/TODO
+++ b/khan-internship/TODO
@@ -1,10 +1,7 @@
-- convert anchor point videos to use fake-ipad chrome
 - add dimensions for all videos/images
-- add posters for all videos
 - convert videos to webm
-- fix looping of videos
 - autoplay/pause videos as the user scrolls
-- write the damn thing (first pass)
+- write
     - scratchpad
         - intro: goal
         - app architecture: webview content with interactive parts
@@ -16,3 +13,4 @@
         - wysiwyg vs code for specifying prototypes
         - react takeaaways, immutable data structures
 
+- test looping of videos
